--- a/blocs/swiper.css
+++ b/blocs/swiper.css
@@ -1,8 +1,5 @@
 .swiper {
   width: 100%;
-  height: 600px;
-  background-color: black;
-  color: white
 }
 
 .swiper-button-prev::after {
@@ -34,44 +31,12 @@
 
 }
 
-
-
-
-
-.swiper__wrapper {
+.feedback__swiper__wrapper,
+.gallery__swiper__wrapper {
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0 26px;
   margin-top: -50px;
-}
-
-.card {}
-
-.card__img {
-  border-radius: 20px;
-  width: 254px;
-  height: 254px;
-
-}
-
-.card__item {
-  display: flex !important;
-  align-items: center !important;
-  gap: 0 29px;
-  width: 620px;
-}
-
-.card__name {
-  font-size: 24px;
-
-}
-
-.card__post {
-  font-size: 20px;
-}
-
-.card__description {
-  font-size: 18px;
 }
