--- a/blocs/offers.css
+++ b/blocs/offers.css
@@ -2,6 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  max-width: 921px;
 }
 
 .offers {
@@ -21,7 +23,7 @@
   max-width: 400px;
   padding: 91px 83px 90px 0;
   line-height: 1.2;
-
+  z-index: 10;
 
 }
 
