--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@
 @import url(/blocs/swiper.css);
 @import url(/blocs/feedback.css);
 @import url(/blocs/gallery.css);
+@import url(/blocs/price.css);
+@import url(/blocs/card-price.css);
+@import url(/blocs/condition.css);
 
 @font-face {
   font-family: 'ComicSansMS';
@@ -14,6 +17,16 @@
 @font-face {
   font-family: 'ComicSansMS';
   src: url(/fonts/ComicSansMS.woff2);
+}
+
+@font-face {
+  font-family: 'FiraSans-SemiBold';
+  src: url(/fonts/FiraSans-SemiBold.woff);
+}
+
+@font-face {
+  font-family: 'FiraSans-SemiBold';
+  src: url(/fonts/FiraSans-SemiBold.woff2);
 }
 
 @font-face {
@@ -46,8 +59,6 @@
   src: url(/fonts/RightGroteskText-WideBold.woff2);
 }
 
-
-
 .root {
   padding: 0;
   margin: 0;
@@ -70,6 +81,14 @@
   font-family: FiraSans-Regular;
 }
 
+.title {
+  font-size: 36px;
+  text-transform: uppercase;
+  font-family: RightGroteskText-WideBold;
+
+  text-align: center;
+}
+
 .list {
   padding: 0;
   margin: 0;
@@ -77,9 +96,13 @@
 
 }
 
+p,
 .h1,
 h2,
-h3 {
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
 }
