--- a/blocs/footer.css
+++ b/blocs/footer.css
@@ -9,11 +9,14 @@
   justify-content: center;
   color: #ffff;
   background: #000000;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .footer__list-wrapper {
   display: flex;
-  gap: 0 40px;
+  flex-wrap: wrap;
+  gap: 20px 40px;
 }
 
 .footer__list {
@@ -41,6 +44,7 @@
 .footer__nav-list {
   background: white;
   display: flex;
+  flex-wrap: wrap;
   gap: 0 36px;
   font-size: 10px;
   min-height: 47.5px;
@@ -51,4 +55,10 @@
 
 .footer__nav-item {
   line-height: 1;
+}
+
+@media (max-width: 741px) {
+  .footer {
+    padding-top: 20px;
+  }
 }
