--- a/index.css
+++ b/index.css
@@ -75,6 +75,11 @@
   padding: 0;
   margin: 0;
   background-color: black;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 }
 
 :root {
